# shingles.rs

./: .travis.yml  Cargo.toml  README.md
0.1/: search-index.js
0.1/implementors/core/clone/: trait.Clone.js
0.1/implementors/core/iter/iterator/: trait.Iterator.js
0.1/implementors/shingles/: trait.AsShingles.js
0.1/shingles/: index.html  sidebar-items.js  struct.ShingleHasher.html  struct.Shingles.html  struct.Shingles2D.html  trait.AsShingles.html  trait.AsShingles2D.html
0.1/shingles/hasher/: struct.ShingleHasher.html
0.1/shingles/shingles/: struct.Shingles.html  trait.AsShingles.html
0.1/shingles/shingles_2d/: struct.Shingles2D.html  trait.AsShingles2D.html
0.1/src/shingles/src/: hasher.rs.html  lib.rs.html  shingles.rs.html  shingles_2d.rs.html
benches/: shingles.rs  shingles_2d.rs
src/: hasher.rs  lib.rs  shingles.rs  shingles_2d.rs
tests/: shingles.rs  shingles_2d.rs
